Added GET /profile-segment-scores-by-gender
